@@ -1,3 +1,8 @@
+2000-11-02  John Harper  <jsh@eazel.com>
+
+	* events.c (focus_in, focus_out): pass MODE parameter to
+	focus-{in,out}-hook as for leave/enter hooks
+
 2000-10-28  John Harper  <jsh@eazel.com>
 
 	* windows.c (window_input_hint_p): new function
